--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -55,6 +55,7 @@ body {
 	margin: auto;
 	font-family: 'Work Sans';
 	font-size: 14px;
+	background-color: #FFFEF8;
 }
 header {
 	display: flex;
@@ -122,12 +123,13 @@ li:hover {
 /* portfolio section */
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	margin-bottom: 50px;
 }
 .filters {
 	display: flex;
 	justify-content: center;
 	gap: 10px;
+	margin-bottom: 50px;
 }
 .filters li a {
 	display: flex;
@@ -139,7 +141,11 @@ li:hover {
 	text-decoration: none;
 	border: 1px solid #1D6154;
 	border-radius: 60px;
-	padding: 10px;
+	padding: 10px 25px;
+}
+.filters li a:hover {
+	color: white;
+	background-color: #1D6154;
 }
 .gallery {
 	width: 100%;
