--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -40,7 +40,7 @@ blockquote, q {
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
+	content: "";
 	content: none;
 }
 table {
@@ -51,73 +51,90 @@ table {
 
 /* global css */
 body {
-	max-width: 1140px;
+	max-width: 1440px;
 	margin: auto;
-	font-family: 'Work Sans';
+	font-family: "Work Sans";
 	font-size: 14px;
 	background-color: #FFFEF8;
 }
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0;
+	align-items: center;
+	max-width: 1140px;
+	margin: 50px auto;
+}
+main {
+	max-width: 1140px;
+	margin: auto;
 }
 section {
-	margin: 50px 0;
+	padding: 75px 95px;
 }
 h1 {
 	display: flex;
 	flex-direction: column;
-	font-family: 'Syne';
+	font-family: "Syne";
 	font-size: 22px;
 	font-weight: 800;
 	color: #B1663C;
+	gap: 5px;
 }
 h1 > span {
-	font-family: 'Work Sans';
+	font-family: "Work Sans";
 	font-size: 10px;
-	letter-spacing: 0.1em;
+	font-weight: 400;
+	letter-spacing: 0.05em;
+	text-transform: uppercase;
 }
 h2 {
-	font-family: 'Syne';
+	font-family: "Syne";
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154;
 }
 nav ul {
 	display: flex;
-	align-items: center;
 	list-style-type: none;
 }
 nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+	display: flex;
+	align-items: center;
+	padding-left: 50px;
+	font-size: 16px;
+}
+nav li img {
+	width: 22px;
 }
 li:hover {
 	color: #B1663C;
+}
+a {
+	color: inherit;
+	text-decoration: none;
 }
 
 /* introduction section */
 #introduction {
 	display: flex;
 	align-items: center;
+	gap: 7.5%;
 }
 #introduction figure {
 	flex: 1;
 }
 #introduction img {
-	display: block;
-	margin: auto;
-	width: 80%;
+	width: 100%;
 }
 #introduction article {
-	flex: 1;
+	flex: 0.85;
 }
 #introduction h2 {
-	margin-bottom: 1em;
+	margin-bottom: 0.8em;
 }
 #introduction p {
-	margin-bottom: 0.5em;
+	color: #3D3D3D;
+	margin-bottom: 1em;
 }
 
 /* portfolio section */
@@ -128,15 +145,15 @@ li:hover {
 .filters {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	gap: 10px;
 	margin-bottom: 50px;
 }
 .filter {
-	font-family: 'Syne';
+	font-family: "Syne";
 	font-size: 16px;
 	font-weight: 700;
 	color: #1D6154;
-	background-color: transparent;
 	border: 1px solid #1D6154;
 	border-radius: 60px;
 	padding: 10px 25px;
@@ -157,50 +174,71 @@ li:hover {
 .gallery img {
 	width: 100%;
 }
+figcaption {
+	color: #3D3D3D;
+	margin-top: 5px;
+}
 
 /* contact section */
 #contact {
-	width: 50%;
+	width: 33.6%;
 	margin: auto;
+	padding: 0;
+	color: #3D3D3D;
 }
 #contact > * {
 	text-align: center;
 }
-#contact h2{
-	margin-bottom: 20px;
+#contact h2 {
+	margin-bottom: 15px;
+}
+#contact p {
+	font-size: 16px;
 }
 #contact form {
+	font-weight: 500;
 	text-align: left;
-	margin-top: 30px;
+	margin-top: 20px;
 	display: flex;
 	flex-direction: column;
 }
-#contact input {
-	height: 50px;
-	font-size: 1.2em;
-	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
-}
 #contact label {
-	margin: 2em 0 1em 0;
+	margin: 2.8em 0 0.6em 0;
+}
+.contactInput {
+	height: 50px;
+	font-size: 16px;
+	border: none;
+	filter: drop-shadow(0 4px 14px rgba(0, 0, 0, 0.09));
 }
 #contact textarea {
 	border: none;
-	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	filter: drop-shadow(0 4px 14px rgba(0, 0, 0, 0.09));
 }
-input[type="submit"]{
-	font-family: 'Syne';
+input[type="submit"] {
+	font-family: "Syne";
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto;
+	margin : 2.8em auto;
 	width: 180px;
 	text-align: center;
 	border-radius: 60px;
+	border: none;
+	padding: 10px 0;
 }
 
-footer nav ul {
+/* footer */
+footer {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em;
+	align-items: center;
+	background-color: white;
+}
+footer nav ul {
+	margin: 1.65em 6.5em;
+}
+footer nav li {
+	font-size: 14px;
+	font-weight: 300;
 }
