--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -110,6 +110,9 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
+.activeNav {
+	font-weight: 700;
+}
 
 /* introduction section */
 #introduction {
@@ -240,6 +243,9 @@ input[type="submit"] {
 	font-size: 14px;
 	font-weight: 500;
 	text-decoration: underline;
+}
+.passP:hover {
+	color: #B1663C;
 }
 
 /* footer */
