--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -210,7 +210,7 @@ figcaption {
 	font-size: 16px;
 }
 #contact form,
-#login form {
+#loginForm {
 	font-weight: 500;
 	text-align: left;
 	display: flex;
