Add error message to then method in login.js and style.css

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -250,6 +250,10 @@ input[type="submit"] {
 .forgot:hover {
 	color: #B1663C;
 }
+.error {
+	font-weight: 600;
+	margin-top: 30px;
+}
 
 /* footer */
 footer {
