--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -124,7 +124,7 @@ a {
 	color: inherit;
 	text-decoration: none;
 }
-.activeNav {
+.active-nav {
 	font-weight: 600;
 }
 
@@ -233,7 +233,7 @@ figcaption {
 	font-size: 16px;
 }
 #contact form,
-#loginForm {
+#login-form {
 	font-weight: 500;
 	text-align: left;
 	display: flex;
