--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -62,14 +62,16 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	color: white;
 	background-color: black;
 	font-size: 16px;
 	padding: 22px 0;
 	gap: 12px;
 }
-#edit,
-#edit .fa-pen-to-square {
+#edit .fa-pen-to-square,
+#edit p {
 	color: white;
+	cursor: pointer;
 }
 header {
 	display: flex;
@@ -103,6 +105,11 @@ h2 {
 	font-weight: 700;
 	font-size: 30px;
 	color: #1D6154;
+}
+h3 {
+	font-size: 26px;
+	text-align: center;
+	margin-bottom: 45px;
 }
 nav ul {
 	display: flex;
@@ -170,6 +177,10 @@ a {
 	position: relative;
 	left: 165px;
 }
+#projets aside:hover {
+	color: #B1663C;
+	cursor: pointer;
+}
 #projets .fa-pen-to-square {
 	margin-right: 10px;
 }
@@ -210,6 +221,22 @@ a {
 figcaption {
 	color: #3D3D3D;
 	margin-top: 7px;
+}
+dialog {
+	max-width: 630px;
+	border: 0;
+	border-radius: 10px;
+	outline: none;
+	padding: 25px 30px 25px 30px;
+}
+dialog::backdrop {
+	background: rgba(0, 0, 0, 0.3);
+}
+dialog .fa-xmark {
+	display: flex;
+	justify-content: flex-end;
+	padding: 11.5px 6.5px;
+	margin-bottom: 10px;
 }
 
 /* contact and login sections */
