Fix keydown addEventListener method from modal and add button to trash-can icon in script.js and add del-btn class to style.css

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -267,10 +267,11 @@ dialog figure {
 dialog img {
 	width: 100%;
 }
-dialog figcaption {
+.del-btn {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	color: white;
 	background-color: black;
 	border-radius: 2px;
 	width: 17px;
@@ -279,9 +280,8 @@ dialog figcaption {
 	top: 6px;
 	right: 5px;
 	margin: 0;
-}
-dialog .fa-trash-can {
-	color: white;
+	border: 0;
+	cursor: pointer;
 }
 .modal-main-btn {
 	width: 237px;
