--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -340,19 +340,21 @@ dialog img {
 	border: 0;
 	filter: drop-shadow(0 4px 14px rgba(0, 0, 0, 0.09));
 }
-input[type="submit"],
+.form-btn,
 .modal-main-btn {
 	font-family: "Syne";
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
 	margin : 40px auto 30px auto;
-	width: 180px;
 	text-align: center;
 	border-radius: 60px;
 	border: 0;
 	padding: 10px 0;
 	cursor: pointer;
+}
+.form-btn {
+	width: 180px;
 }
 .forgot {
 	font-size: 14px;
