Add inactive class to validate button in index.html and style.css

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -356,6 +356,9 @@ dialog img {
 .form-btn {
 	width: 180px;
 }
+.inactive {
+	background-color: #A7A7A7;
+}
 .forgot {
 	font-size: 14px;
 	font-weight: 500;
