Add chevron-down icon to replace the default one from category select tag in style.css

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -273,6 +273,11 @@ dialog form {
 	grid-row-gap: 29px;
 	padding-bottom: 67px;
 }
+#modal-block2 {
+	display: flex;
+	flex-direction: column;
+	padding-bottom: 47px;
+}
 dialog figure {
 	position: relative;
 }
@@ -295,11 +300,6 @@ dialog img {
 	border: 0;
 	cursor: pointer;
 }
-#modal-block2 {
-	display: flex;
-	flex-direction: column;
-	padding-bottom: 47px;
-}
 #modal-block2 label {
 	font-weight: 500;
 	color: #3D3D3D;
@@ -308,6 +308,15 @@ dialog img {
 }
 #category {
 	background-color: white;
+
+	/* Remplacement du chevron par l'icône chevron-down Font Awesome */
+	appearance: none;
+    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"%3E%3C!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z" fill="%236C6C6C"/%3E%3C/svg%3E');
+    background-repeat: no-repeat;
+
+	/* Position et taille de l'icône */
+    background-position: right 30px center;
+    background-size: 10px;
 }
 .modal-main-btn {
 	width: 237px;
