Add file-conditions class to add-block paragraph in index.html, remove alert messages from conditions in fileCheck function, replace them by updating text content and adding an alert class to paragraph and add a condition when opening the modal to reset text content and alert class in style.css and script.js

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -326,10 +326,14 @@ dialog img {
 input[type=file] {
 	display: none;
 }
-.add-block p {
+.file-conditions {
 	font-size: 10px;
 	color: #444444;
 	margin-bottom: 20px;
+}
+.alert {
+	font-size: 14px;
+	color: red;
 }
 .details-label {
 	font-weight: 500;
