--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -301,7 +301,6 @@ dialog img {
 }
 .add-block {
 	width: 420px;
-	max-height: 169px;
 	background-color: #E8F1F6;
 	border-radius: 3px;
 	margin-bottom: 10px;
@@ -327,7 +326,7 @@ dialog img {
 input[type=file] {
 	display: none;
 }
-.file-conditions {
+#file-conditions {
 	font-size: 10px;
 	color: #444444;
 	margin-bottom: 20px;
@@ -335,11 +334,13 @@ input[type=file] {
 .alert {
 	font-size: 14px;
 	color: red;
+	margin-bottom: 20px;
 }
 .add-block img {
-	width: auto;
-	max-width: 420px;
-	height: 100%;
+	display: block;
+	max-height: 169px;
+	object-fit: contain;
+	border-radius: 3px;
 }
 .details-label {
 	font-weight: 500;
