Add select class with chevron-up icon to category id in style.css, add addEventListener methods to addCategory select tag to toggle select class and add it to new categoriesList function in script.js

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -360,6 +360,11 @@ input[type=file] {
     background-position: right 30px center;
     background-size: 10px;
 }
+#category.select {
+
+	/* Icône chevron-up Font Awesome */
+	background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"%3E%3C!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--%3E%3Cpath d="M233.4 105.4c12.5-12.5 32.8-12.5 45.3 0l192 192c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L256 173.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l192-192z" fill="%236C6C6C"/%3E%3C/svg%3E');
+}
 .modal-main-btn {
 	width: 237px;
 }
