--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -184,6 +184,11 @@ a {
 #projets .fa-pen-to-square {
 	margin-right: 10px;
 }
+#success {
+	font-size: 16px;
+	font-weight: 700;
+	text-align: center;
+}
 .filters {
 	display: flex;
 	justify-content: center;
