Add align-items property with end value to gallery block in style.css

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -219,6 +219,7 @@ a {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	align-items: end;
 }
 .gallery img {
 	width: 100%;
