--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -349,6 +349,11 @@ input[type=file] {
 	text-align: left;
 	margin: 20px 0 10px 0;
 }
+#title-alert {
+	font-size: 14px;
+	color: red;
+	margin-top: 20px;
+}
 #category {
 	background-color: white;
 
